--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no"/>
-    <title>恒达时讯WEBGIS开放平台</title>
+    <title>WEBGIS开放平台</title>
     <link rel="stylesheet" href="./static/css/normalize/normalize.css">
     <link rel="stylesheet" href="./static/css/basecss.css">
 
